[gd_scene load_steps=46 format=3 uid="uid://dn00n221yqw2p"]

[ext_resource type="Script" uid="uid://5yixkaftnqei" path="res://src/coop_game.gd" id="1_t8gqi"]
[ext_resource type="Script" uid="uid://0gkypwrq3sew" path="res://src/util/RandomTimer.gd" id="3_deeh8"]
[ext_resource type="Script" uid="uid://biy2bicher7co" path="res://src/coop/ShopGridMap.gd" id="5_gi45j"]
[ext_resource type="Theme" uid="uid://cimlshnn1i48n" path="res://theme/theme.css" id="5_m6sqb"]
[ext_resource type="PackedScene" uid="uid://dr42jnynq1eqt" path="res://assets/dungeon.blend" id="6_lptey"]
[ext_resource type="PackedScene" uid="uid://hkst0usgy4ul" path="res://src/blocks/player_spawner.tscn" id="7_iyq4s"]
[ext_resource type="MeshLibrary" uid="uid://tcoj72myjlwl" path="res://map/dungeon_meshes.tres" id="8_0rtmg"]
[ext_resource type="PackedScene" uid="uid://cyrvrgf562u6o" path="res://map/grate_long.tscn" id="8_dtat6"]
[ext_resource type="PackedScene" uid="uid://bmkmfsmjmv388" path="res://map/spikes.tscn" id="9_30eib"]
[ext_resource type="PackedScene" uid="uid://bqqnmayb2s48f" path="res://src/blocks/prep_area.tscn" id="10_hcrk0"]
[ext_resource type="PackedScene" uid="uid://bthf3mqkvyw2i" path="res://map/wall.tscn" id="11_0lgnc"]
[ext_resource type="PackedScene" uid="uid://cfpgm0g4budde" path="res://src/ui/shop_item.tscn" id="11_arh2m"]
[ext_resource type="PackedScene" uid="uid://cc0q2osqijafd" path="res://map/cauldron_base.tscn" id="11_lptey"]
[ext_resource type="PackedScene" uid="uid://dtysqsseit3yw" path="res://src/blocks/customer_spawner.tscn" id="12_1ssp0"]
[ext_resource type="PackedScene" uid="uid://cbwmqa8y5klj3" path="res://src/blocks/material_box.tscn" id="13_hmubx"]
[ext_resource type="PackedScene" uid="uid://be4ur3al8q3gp" path="res://map/wall_counter.tscn" id="15_kamss"]
[ext_resource type="Script" uid="uid://coj14chbxj38d" path="res://src/coop/time_slider.gd" id="15_qjup0"]
[ext_resource type="Texture2D" uid="uid://b3kjjfw1us5ak" path="res://assets/scroll/Map inventory/Map/Map Close/0.png" id="16_0rtmg"]
[ext_resource type="Texture2D" uid="uid://0fcg8v7pq6b7" path="res://assets/scroll/Map inventory/Map/Map Open/0.png" id="16_36a83"]
[ext_resource type="PackedScene" uid="uid://om8crst2odmf" path="res://map/torch.tscn" id="16_43vty"]
[ext_resource type="Texture2D" uid="uid://da33a8dkxqllj" path="res://icon.svg" id="16_58ut5"]
[ext_resource type="PackedScene" uid="uid://hne88dktobly" path="res://src/blocks/trash.tscn" id="16_dtat6"]
[ext_resource type="Texture2D" uid="uid://c6skh1c743u47" path="res://assets/scroll/Map inventory/Map/Map Close/1.png" id="17_0teeq"]
[ext_resource type="Texture2D" uid="uid://cqglscspmci7b" path="res://assets/scroll/Map inventory/Map/Map Open/1.png" id="17_djjii"]
[ext_resource type="Script" uid="uid://pymeyerou0w7" path="res://src/ui/ready_container.gd" id="18_027cq"]
[ext_resource type="Texture2D" uid="uid://bp2a4oup0b1jx" path="res://assets/scroll/Map inventory/Map/Map Close/2.png" id="18_hcrk0"]
[ext_resource type="VoxelGIData" uid="uid://dvddnmfxy5rwp" path="res://map/coop_game.VoxelGI_data.res" id="18_lptey"]
[ext_resource type="Texture2D" uid="uid://cnbap2wi5cevy" path="res://assets/scroll/Map inventory/Map/Map Open/2.png" id="18_qjnkl"]
[ext_resource type="Texture2D" uid="uid://cf1d7ydf4m8gx" path="res://assets/scroll/Map inventory/Map/Map Close/3.png" id="19_0lgnc"]
[ext_resource type="Texture2D" uid="uid://cicpjsrxlm7hb" path="res://assets/inputs/Xbox Series/XboxSeriesX_A.png" id="19_cva0b"]
[ext_resource type="Script" uid="uid://bf1k0qm6t7ct5" path="res://src/ui/slide_effect.gd" id="19_ruurj"]
[ext_resource type="Texture2D" uid="uid://c8ulqj2mugxa6" path="res://assets/scroll/Map inventory/Map/Map Open/3.png" id="19_u8l8w"]
[ext_resource type="Texture2D" uid="uid://bcsxamcpn7uhs" path="res://assets/scroll/Map inventory/Map/Map Open/4.png" id="20_1biyi"]
[ext_resource type="Texture2D" uid="uid://ck7jk4n1ut0o0" path="res://assets/scroll/Map inventory/Map/Map Close/4.png" id="20_1ssp0"]
[ext_resource type="Texture2D" uid="uid://ccwvw7m5561mj" path="res://assets/scroll/Map inventory/Map/Map Close/5.png" id="21_hmubx"]
[ext_resource type="Texture2D" uid="uid://vjfmlye6n1s7" path="res://assets/scroll/Map inventory/Map/Map Open/5.png" id="21_ifkex"]
[ext_resource type="Texture2D" uid="uid://d1hcaaimm6yil" path="res://assets/scroll/Map inventory/Map/Map Open/6.png" id="22_7hmlr"]
[ext_resource type="Texture2D" uid="uid://dpw7k7xf5ly5t" path="res://assets/scroll/Map inventory/Map/Map Close/6.png" id="22_30eib"]
[ext_resource type="Script" uid="uid://lhla87ebfps0" path="res://src/ui/shop.gd" id="22_dp0hm"]
[ext_resource type="Texture2D" uid="uid://csrod5n8wevq8" path="res://assets/scroll/Map inventory/Map/Map Open/7.png" id="23_deeh8"]
[ext_resource type="Texture2D" uid="uid://xngh64tknmn" path="res://assets/scroll/Map inventory/Map/Map Close/7.png" id="23_kamss"]
[ext_resource type="Script" uid="uid://dj37nxxnycrpq" path="res://map/modular_map.gd" id="42_3s5ca"]

[sub_resource type="BoxShape3D" id="BoxShape3D_lptey"]
size = Vector3(24.9221, 4.09851, 0.507812)

[sub_resource type="SpriteFrames" id="SpriteFrames_xkkuv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_0rtmg")
}, {
"duration": 1.0,
"texture": ExtResource("17_0teeq")
}, {
"duration": 1.0,
"texture": ExtResource("18_hcrk0")
}, {
"duration": 1.0,
"texture": ExtResource("19_0lgnc")
}, {
"duration": 1.0,
"texture": ExtResource("20_1ssp0")
}, {
"duration": 1.0,
"texture": ExtResource("21_hmubx")
}, {
"duration": 1.0,
"texture": ExtResource("22_30eib")
}, {
"duration": 1.0,
"texture": ExtResource("23_kamss")
}],
"loop": false,
"name": &"close",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_36a83")
}, {
"duration": 1.0,
"texture": ExtResource("17_djjii")
}, {
"duration": 1.0,
"texture": ExtResource("18_qjnkl")
}, {
"duration": 1.0,
"texture": ExtResource("19_u8l8w")
}, {
"duration": 1.0,
"texture": ExtResource("20_1biyi")
}, {
"duration": 1.0,
"texture": ExtResource("21_ifkex")
}, {
"duration": 1.0,
"texture": ExtResource("22_7hmlr")
}, {
"duration": 1.0,
"texture": ExtResource("23_deeh8")
}],
"loop": false,
"name": &"open",
"speed": 6.0
}]

[sub_resource type="Environment" id="Environment_hmubx"]
background_mode = 2
tonemap_mode = 2
tonemap_exposure = 1.5
ssao_radius = 8.85
ssil_radius = 2.63
glow_enabled = true
glow_intensity = 0.4
glow_strength = 1.5
glow_blend_mode = 1
fog_mode = 1
fog_sun_scatter = 1.0
fog_density = 0.3055
fog_aerial_perspective = 0.37
fog_sky_affect = 0.889
volumetric_fog_enabled = true
volumetric_fog_density = 0.01

[node name="CoopGame" type="Node3D" node_paths=PackedStringArray("shop_open_time", "money_label", "shop", "player_spawner", "customer_spawner", "obstacles")]
script = ExtResource("1_t8gqi")
shop_open_time = NodePath("CanvasLayer/Control/ShopOpenTime")
money_label = NodePath("CanvasLayer/Control/MarginContainer/HBoxContainer/Money")
shop = NodePath("CanvasLayer/Control/Shop")
player_spawner = NodePath("PlayerSpawner")
customer_spawner = NodePath("GridMap3/GridMap2/CustomerSpawner")
obstacles = [NodePath("GridMap3/GridMap2/Spikes"), NodePath("GridMap3/GridMap2/grate_long")]

[node name="ShopTimeEffect" type="Node" parent="." node_paths=PackedStringArray("control")]
script = ExtResource("19_ruurj")
control = NodePath("../CanvasLayer/Control/ShopOpenTime")

[node name="ReadyEffect" type="Node" parent="." node_paths=PackedStringArray("control")]
script = ExtResource("19_ruurj")
control = NodePath("../CanvasLayer/Control/ReadyContainer")

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
script = ExtResource("3_deeh8")
min_time = 10.0
max_time = 20.0

[node name="ShopOpenTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, -0.162, 28.6334, 18.6114)
current = true
fov = 30.0
size = 7.27389
far = 600.0

[node name="PlayerSpawner" parent="." node_paths=PackedStringArray("spawn_root", "ready_container") instance=ExtResource("7_iyq4s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
spawn_root = NodePath(".")
ready_container = NodePath("../CanvasLayer/Control/ReadyContainer")

[node name="GridMap3" type="GridMap" parent="."]
visible = false
mesh_library = ExtResource("8_0rtmg")
cell_size = Vector3(4, 2, 4)

[node name="dungeon" parent="GridMap3" instance=ExtResource("6_lptey")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 4)
visible = false

[node name="GridMap2" type="GridMap" parent="GridMap3" groups=["grid"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh_library = ExtResource("8_0rtmg")
data = {
"cells": PackedInt32Array(65531, 65532, 23, 65531, 65533, 23, 65531, 65534, 23, 65531, 65535, 23, 65531, 0, 23, 65531, 1, 23, 65532, 65533, 23, 65532, 65534, 23, 65532, 1, 23, 65533, 65532, 23, 65533, 65533, 23, 65533, 65534, 23, 65533, 65535, 23, 65533, 0, 23, 65533, 1, 23, 65534, 65532, 23, 65534, 65533, 23, 65534, 65534, 23, 65534, 65535, 23, 65534, 0, 23, 65534, 1, 23, 65535, 65532, 23, 65535, 65533, 23, 65535, 65534, 23, 65535, 1, 23, 1, 65534, 23, 1, 0, 23, 1, 1, 23, 2, 65534, 23, 2, 65535, 23, 2, 0, 23, 2, 1, 23, 3, 65534, 23, 3, 65535, 23, 3, 0, 23, 3, 1, 23, 4, 65532, 23, 4, 65533, 23, 4, 65534, 23, 4, 65535, 23, 4, 0, 23, 4, 1, 23, 65531, 65531, 23, 65533, 65531, 23, 65534, 65531, 23, 65535, 65531, 23, 2, 65531, 23, 4, 65531, 23, 5, 65531, 23, 5, 65532, 23, 5, 65533, 23, 5, 65534, 23, 5, 65535, 23, 5, 0, 23, 5, 1, 23, 65530, 1, 23, 65530, 0, 23, 65530, 65535, 23, 65530, 65534, 23, 65530, 65533, 23, 65530, 65532, 23, 65530, 65531, 23, 5, 65530, 23, 4, 65530, 23, 65535, 65530, 23, 65534, 65530, 23, 65533, 65530, 23, 65532, 65530, 23, 65531, 65530, 23, 65530, 65530, 23, 1, 65535, 23, 3, 65532, 23, 3, 65531, 23, 3, 65530, 23, 3, 65533, 23, 65535, 65535, 23, 65535, 0, 23, 0, 65531, 23, 0, 65535, 23)
}
script = ExtResource("5_gi45j")

[node name="CustomerSpawner" parent="GridMap3/GridMap2" instance=ExtResource("12_1ssp0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0639, 1.5914, -11.8853)

[node name="StaticBody3D" type="StaticBody3D" parent="GridMap3/GridMap2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 4)

[node name="CollisionShape3D" type="CollisionShape3D" parent="GridMap3/GridMap2/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.0954, 1.54926, 0.246094)
shape = SubResource("BoxShape3D_lptey")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="GridMap3/GridMap2/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.0954, 1.54926, -16.4765)
shape = SubResource("BoxShape3D_lptey")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="GridMap3/GridMap2/StaticBody3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 14.5263, 1.54926, -8.0539)
shape = SubResource("BoxShape3D_lptey")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="GridMap3/GridMap2/StaticBody3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -10.5074, 1.54926, -8.0539)
shape = SubResource("BoxShape3D_lptey")

[node name="CauldronBase" parent="GridMap3/GridMap2" instance=ExtResource("11_lptey")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -3)

[node name="GridMap" type="GridMap" parent="GridMap3/GridMap2"]
mesh_library = ExtResource("8_0rtmg")
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Spikes" parent="GridMap3/GridMap2" node_paths=PackedStringArray("connected_trap") instance=ExtResource("9_30eib")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, -10)
connected_trap = NodePath("../Spikes2")

[node name="Spikes2" parent="GridMap3/GridMap2" instance=ExtResource("9_30eib")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, -6)

[node name="grate_long" parent="GridMap3/GridMap2" node_paths=PackedStringArray("connected_trap") instance=ExtResource("8_dtat6")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -7, 1, -8)
connected_trap = NodePath("../grate_long2")

[node name="grate_long2" parent="GridMap3/GridMap2" instance=ExtResource("8_dtat6")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -7, 1, 0)

[node name="PrepArea4" parent="GridMap3" instance=ExtResource("10_hcrk0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 3)

[node name="PrepArea5" parent="GridMap3" instance=ExtResource("10_hcrk0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 1)

[node name="PrepArea6" parent="GridMap3" instance=ExtResource("10_hcrk0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -1)

[node name="PrepArea7" parent="GridMap3" instance=ExtResource("10_hcrk0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -3)

[node name="PrepArea" parent="GridMap3" instance=ExtResource("10_hcrk0")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1, 0, -11)

[node name="PrepArea2" parent="GridMap3" instance=ExtResource("10_hcrk0")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3, 0, -11)
type = 1

[node name="PrepArea3" parent="GridMap3" instance=ExtResource("10_hcrk0")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -5, 0, -11)

[node name="Material" parent="GridMap3" instance=ExtResource("13_hmubx")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 11, 0, 0)

[node name="Material2" parent="GridMap3" instance=ExtResource("13_hmubx")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 11, 0, -2)
type = 1

[node name="Material3" parent="GridMap3" instance=ExtResource("13_hmubx")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 11, 0, -4)
type = 3

[node name="Trash" parent="GridMap3" instance=ExtResource("16_dtat6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 0, -11)

[node name="Node3D" type="Node3D" parent="GridMap3"]
visible = false

[node name="Torch" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.20866, -12)

[node name="Torch2" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 2.20866, -12)

[node name="Torch3" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 2.20866, -12)

[node name="Torch4" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.666667, 2.20866, 4)

[node name="Torch5" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 8.66667, 2.20866, 4)

[node name="Torch6" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -8.33333, 2.20866, 4)

[node name="Torch7" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.666667, 2.20866, 11)

[node name="Torch8" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 8.66667, 2.20866, 11)

[node name="Torch9" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -8.33333, 2.20866, 11)

[node name="Torch10" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -20.6667, 2.20866, -4.66667)

[node name="Torch11" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -20.6667, 2.20866, 3.33333)

[node name="Torch12" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -20.6667, 2.20866, -13.6667)

[node name="Torch13" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 18.3333, 2.20866, -4.66667)

[node name="Torch14" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 18.3333, 2.20866, 3.33333)

[node name="Torch15" parent="GridMap3/Node3D" instance=ExtResource("16_43vty")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 18.3333, 2.20866, -13.6667)

[node name="Walls" type="Node3D" parent="GridMap3"]

[node name="WallsTop" type="Node3D" parent="GridMap3/Walls"]

[node name="WallCounter" parent="GridMap3/Walls/WallsTop" instance=ExtResource("15_kamss")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -10)

[node name="Wall3" parent="GridMap3/Walls/WallsTop" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, -10)

[node name="Wall4" parent="GridMap3/Walls/WallsTop" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -10)

[node name="Wall5" parent="GridMap3/Walls/WallsTop" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -10)

[node name="Wall6" parent="GridMap3/Walls/WallsTop" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -10)

[node name="Wall7" parent="GridMap3/Walls/WallsTop" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -10)

[node name="WallsRight" type="Node3D" parent="GridMap3/Walls"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, 0, 0)

[node name="Wall2" parent="GridMap3/Walls/WallsRight" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -12)

[node name="Wall3" parent="GridMap3/Walls/WallsRight" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, -12)

[node name="Wall4" parent="GridMap3/Walls/WallsRight" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -12)

[node name="Wall5" parent="GridMap3/Walls/WallsRight" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -12)

[node name="WallsLeft" type="Node3D" parent="GridMap3/Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2, 0, 0)

[node name="Wall4" parent="GridMap3/Walls/WallsLeft" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -12)

[node name="Wall5" parent="GridMap3/Walls/WallsLeft" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -12)

[node name="Wall6" parent="GridMap3/Walls/WallsLeft" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -12)

[node name="Wall7" parent="GridMap3/Walls/WallsLeft" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -12)

[node name="WallsBot" type="Node3D" parent="GridMap3/Walls"]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, -6)

[node name="Wall2" parent="GridMap3/Walls/WallsBot" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -8)

[node name="Wall3" parent="GridMap3/Walls/WallsBot" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, -8)

[node name="Wall4" parent="GridMap3/Walls/WallsBot" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -8)

[node name="Wall5" parent="GridMap3/Walls/WallsBot" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -8)

[node name="Wall6" parent="GridMap3/Walls/WallsBot" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -8)

[node name="Wall7" parent="GridMap3/Walls/WallsBot" instance=ExtResource("11_0lgnc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -8)

[node name="VoxelGI" type="VoxelGI" parent="GridMap3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.64111, -6.23767)
size = Vector3(27.7139, 11.6631, 24.0667)
data = ExtResource("18_lptey")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("5_m6sqb")

[node name="ShopOpenTime" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
offset_right = 230.0
offset_bottom = 46.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/ShopOpenTime" node_paths=PackedStringArray("timer")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
step = 0.1
script = ExtResource("15_qjup0")
timer = NodePath("../../../../ShopOpenTimer")

[node name="ReadyContainer" type="MarginContainer" parent="CanvasLayer/Control" node_paths=PackedStringArray("player_container", "key_container")]
layout_mode = 1
offset_right = 42.0
offset_bottom = 79.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
script = ExtResource("18_027cq")
player_container = NodePath("VBoxContainer/HBoxContainer")
key_container = NodePath("VBoxContainer/HBoxContainer2")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/ReadyContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/ReadyContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/ReadyContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/ReadyContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("19_cva0b")
expand_mode = 3
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -79.0
offset_bottom = 38.0
grow_horizontal = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("16_58ut5")
expand_mode = 3
stretch_mode = 5

[node name="Money" type="Label" parent="CanvasLayer/Control/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "123123"

[node name="Shop" type="PanelContainer" parent="CanvasLayer/Control" node_paths=PackedStringArray("container")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -231.0
offset_right = 400.0
offset_bottom = 231.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("22_dp0hm")
container = NodePath("MarginContainer/HBoxContainer")
item_scene = ExtResource("11_arh2m")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/Shop"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Shop/MarginContainer"]
layout_mode = 2

[node name="ShopItem" parent="CanvasLayer/Control/Shop/MarginContainer/HBoxContainer" instance=ExtResource("11_arh2m")]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="CanvasLayer/Control/CenterContainer"]
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Control/CenterContainer/Control"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_xkkuv")
animation = &"open"
frame = 7
frame_progress = 1.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hmubx")

[node name="ModularMap" type="GridMap" parent="."]
cell_size = Vector3(8, 2, 8)
script = ExtResource("42_3s5ca")
